--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ bs4==0.0.1
 certifi==2022.6.15
 charset-normalizer==2.1.0
 frozenlist==1.3.0
+heroku==0.1.4
 idna==3.3
 multidict==6.0.2
+python-dateutil==1.5
 python-decouple==3.6
 pytz==2022.1
 requests==2.28.1
